Evolotion scripts from 2009 to 2011 version
- there are three evolutions scripts that do the evolution

- added layer and ui components for it

- added the old de locale

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ src/*.egg-info
 
 var/filestorage/*
 var/log/*
+var/beispiel-data/*
+var
+
+*.tgz
 
 # TODO: remove
-src/beispiel/browser
+src/beispiel/browser.OLD
