--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,11 +6,14 @@ develop = .
 	../quotationtool.relation
 	../quotationtool.skin
 	../quotationtool.search
+	../quotationtool.bibliography
 	../quotationtool.figuresng
 	../quotationtool.commentary
 	../quotationtool.categorization
 	../quotationtool.biblatex
+	../quotationtool.user
 	../quotationtool.referatory
+	../quotationtool.bbb
 parts = python
       test
       app
