Added locales from quotationtool.locales

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,6 +12,7 @@ develop = .
 	../quotationtool.categorization
 	../quotationtool.biblatex
 	../quotationtool.user
+	../quotationtool.locales
 	../quotationtool.referatory
 	../quotationtool.bbb
 parts = python
