Added support for gunicorn

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -38,6 +38,7 @@ eggs = beispiel
        Paste
        PasteScript
        PasteDeploy
+       gunicorn
 interpreter = bbpy
 
 [python]
@@ -58,6 +59,7 @@ defaults = ['--tests-pattern', '^f?tests$', '-v']
 #zope.app.error = 3.4.0
 #zope.app.folder = 3.4.0
 zope.app.securitypolicy = 3.5.1
+gunicorn = 0.12.0
 
 quotationtool.site = 0.1.0
 quotationtool.security = 0.1.0
