Fixed a bug in layout that messed up IE

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,6 +13,7 @@ develop = .
 	../quotationtool.biblatex
 	../quotationtool.user
 	../quotationtool.locales
+	../quotationtool.tinymce
 	../quotationtool.referatory
 	../quotationtool.bbb
 parts = python
