Added quotationtool.editorial package

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,6 +16,7 @@ develop = .
 	../quotationtool.tinymce
 	../quotationtool.referatory
 	../quotationtool.bbb
+	../quotationtool.editorial
 parts = python
       test
       app
