--- a/buildout.cfg
+++ b/buildout.cfg
@@ -100,3 +100,6 @@ z3c.pagelet = 1.2.1
 z3c.batching = 1.1.0
 z3c.wizard = 0.9.0
 z3c.menu.ready2go = 0.8.0
+z3c.table = 0.9.0
+z3c.batching = 1.1.0
+z3c.indexer = 0.6.0
