--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,6 +17,7 @@ develop = .
 	../quotationtool.referatory
 	../quotationtool.bbb
 	../quotationtool.editorial
+	../quotationtool.quotation
 parts = python
       test
       app
@@ -103,3 +104,4 @@ z3c.menu.ready2go = 0.8.0
 z3c.table = 0.9.0
 z3c.batching = 1.1.0
 z3c.indexer = 0.6.0
+z3c.searcher = 0.6.0
