--- a/etc/zope-debug.conf
+++ b/etc/zope-debug.conf
@@ -11,7 +11,7 @@ site-definition etc/site.zcml
 # Uncomment this if you want to connect to a ZEO server instead:
 #  <zeoclient>
 #    server localhost:8100
-#    storage 1
+#    storage teamniehaus
 #    # ZEO client cache, in bytes
 #    cache-size 20MB
 #    # Uncomment to have a persistent disk cache
