Added quotationtool.workflow package, object removal

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,11 +18,14 @@ develop = .
 	../quotationtool.bbb
 	../quotationtool.editorial
 	../quotationtool.quotation
+	../quotationtool.workflow
+	../zope.wfmc
 parts = python
       test
       app
 
-extends = http://download.zope.org/bluebream/bluebream-1.0.cfg
+#extends = http://download.zope.org/bluebream/bluebream-1.0.cfg
+extends = ../quotationtool.cfg
 
 versions = versions
 
