--- a/buildout.cfg
+++ b/buildout.cfg
@@ -25,7 +25,7 @@ parts = python
       app
 
 #extends = http://download.zope.org/bluebream/bluebream-1.0.cfg
-extends = ../quotationtool.cfg
+extends = quotationtool.cfg
 
 versions = versions
 
@@ -44,7 +44,6 @@ eggs = beispiel
        Paste
        PasteScript
        PasteDeploy
-       gunicorn
 interpreter = bbpy
 
 [python]
@@ -57,54 +56,3 @@ interpreter = python
 recipe = zc.recipe.testrunner
 eggs = beispiel[test]
 defaults = ['--tests-pattern', '^f?tests$', '-v']
-
-
-[versions]
-# for old db items
-#zope.app.session = 3.4.2
-#zope.app.error = 3.4.0
-#zope.app.folder = 3.4.0
-zope.app.securitypolicy = 3.5.1
-gunicorn = 0.12.0
-
-quotationtool.site = 0.1.0
-quotationtool.security = 0.1.0
-quotationtool.renderer = 0.1.0
-quotationtool.relation = 0.1.0
-quotationtool.skin = 0.1.0
-
-zc.relation = 1.0
-zc.catalog = 1.5
-z3c.i18n = 0.1.2
-
-# for browser related things
-z3c.layer.pagelet = 1.9.0
-z3c.pagelet = 1.2.1
-z3c.ptcompat = 0.5.7
-z3c.template = 1.2.1
-z3c.formui = 2.2.0
-z3c.macro = 1.3.0
-z3c.wizard = 0.9.0
-z3c.form = 2.4.1
-z3c.menu.ready2go = 0.8.0
-
-# added for icecontrol
-ice.control = 0.4.0
-z3c.contents = 0.6.0
-z3c.zrtresource = 1.3.0
-z3c.formui = 2.2.0
-z3c.template = 1.2.0
-z3c.layer.pagelet = 1.9.0
-z3c.configurator = 1.3.0
-z3c.table = 0.9.0
-z3c.form = 2.4.1
-z3c.macro = 1.3.0
-z3c.ptcompat = 0.5.7
-z3c.pagelet = 1.2.1
-z3c.batching = 1.1.0
-z3c.wizard = 0.9.0
-z3c.menu.ready2go = 0.8.0
-z3c.table = 0.9.0
-z3c.batching = 1.1.0
-z3c.indexer = 0.6.0
-z3c.searcher = 0.6.0
